ensured the app looks good on mobile and desktop

--- a/css/layout.css
+++ b/css/layout.css
@@ -44,3 +44,7 @@
 .margin-top {
   margin-top: 3rem;
 }
+
+.flex {
+  display: flex;
+}
